Z-index fixed

--- a/css/urban-header.css
+++ b/css/urban-header.css
@@ -13,7 +13,7 @@ body{
     width: 100%;
     background: #fff;
     border-bottom: 2px solid #eee;
-    z-index: 9999;
+    z-index: 99999;
     -webkit-transition: top 0.25s linear;
     -moz-transition: top 0.25s linear;
     -o-transition: top 0.25s linear;
